--- a/src/sass/layouts/_section-products-item.scss
+++ b/src/sass/layouts/_section-products-item.scss
@@ -15,6 +15,7 @@
 
     .product-item-title {
       margin: 0;
+      padding-bottom: 30px;
       font-family: Titan One;
       font-weight: 400;
       font-size: 20px;
@@ -22,8 +23,7 @@
     }
 
     .product-item-text {
-      margin-top: 0;
-
+      margin: 0;
       font-family: DM Sans;
       font-weight: 700;
       font-size: 14px;
