--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,6 +1,6 @@
 %btn {
   border-radius: 20px;
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   font-size: 8px;
   line-height: 10px;
   display: flex;
@@ -71,7 +71,8 @@
   margin: 0 auto;
   @media screen and (max-width: 767px) {
     background-size: 171px 410px, 346px 344px;
-    background-image: url(../images/mobile/icecreame_hero.png), url(../images/mobile/ellipse_hero.png);
+    background-image: url(../images/mobile/icecreame_hero.png),
+      url(../images/mobile/ellipse_hero.png);
     background-repeat: no-repeat, no-repeat;
     background-position: top 83px left 36px;
     background-position: 90% 100%, 100% 50%;
@@ -82,14 +83,41 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero-container {
-      background-image: url(../images/mobile/icecreame_hero@x2.png), url(../images/mobile/ellipse_hero@x2.png);
+      background-image: url(../images/mobile/icecreame_hero@x2.png),
+        url(../images/mobile/ellipse_hero@x2.png);
+    }
+  }
+
+  @media screen and (min-width: 480px) {
+    background-repeat: no-repeat;
+
+    background-image: url(../images/tablet/ellipse_hero.png),
+      url(../images/tablet/icecreame_hero.png);
+    background-size: 168px 133px, 143px 336px, 324px 322px, 124px 126px;
+    background-position: 90% 100%, 100% 50%;
+  }
+
+  @media screen and (min-width: 480px) {
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero-container {
+        background-image: url(../images/tablet/hero-girl@x2.png),
+          url(../images/tablet/icecreame_hero@x2.png),
+          url(../images/tablet/ellipse_hero@x2.png),
+          url(../images/tablet/bidon-moloka@x2.png);
+      }
     }
   }
   @media screen and (min-width: 768px) {
     background-repeat: no-repeat;
 
-    background-image: url(../images/tablet/hero-girl.png), url(../images/tablet/icecreame_hero.png),
-      url(../images/tablet/ellipse_hero.png), url(../images/tablet/bidon-moloka.png);
+    background-image: url(../images/tablet/hero-girl.png),
+      url(../images/tablet/icecreame_hero.png),
+      url(../images/tablet/ellipse_hero.png),
+      url(../images/tablet/bidon-moloka.png);
     background-size: 168px 133px, 143px 336px, 324px 322px, 124px 126px;
     background-position: 80% 100%, 50% 100%, 50% 50%, 5% 93%;
   }
@@ -101,6 +129,10 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
+        background-image: url(../images/tablet/hero-girl@x2.png),
+          url(../images/tablet/icecreame_hero@x2.png),
+          url(../images/tablet/ellipse_hero@x2.png),
+          url(../images/tablet/bidon-moloka@x2.png);
       }
     }
   }
@@ -108,10 +140,11 @@
     min-width: 1200px;
     margin: 0 auto;
     background-size: 293px 232px, 236px 557px, 538px 538px, 188px 191px;
-    background-image: url(../images/hero-girl.png), url(../images/icecreame_hero.png), url(../images/ellipse_hero.png),
+    background-image: url(../images/hero-girl.png),
+      url(../images/icecreame_hero.png), url(../images/ellipse_hero.png),
       url(../images/bidon-moloka.png);
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-    background-position: right 109px bottom 0, bottom 0 right 450px, top 52px right 267px, bottom 45px left 77px;
+    background-position: 80% 100%, 50% 100%, 50% 50%, 5% 90%;
   }
   @media screen and (min-width: 1280px) {
     @media screen and (min-device-pixel-ratio: 2),
@@ -120,6 +153,9 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
+        background-image: url(../images/hero-girl@x2.png),
+          url(../images/icecreame_hero@x2.png),
+          url(../images/ellipse_hero@x2.png), url(../images/bidon-moloka@x2.png);
       }
     }
   }
@@ -148,7 +184,7 @@
 
 .hero-title-text {
   display: inline-block;
-  font-family: "Titan One";
+  font-family: 'Titan One';
   font-style: 400;
   font-weight: normal;
   font-size: 26px;
@@ -194,7 +230,7 @@
     width: 114px;
     height: 48px;
 
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-size: 8px;
     line-height: 1.5;
   }
@@ -262,7 +298,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -281,7 +317,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -301,7 +337,7 @@
   @media screen and (min-width: 768px) {
     display: block;
     text-transform: lowercase;
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-size: 8px;
     line-height: 1.25;
     text-align: right;
@@ -317,7 +353,7 @@
   display: none;
 
   @media screen and (min-width: 768px) {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 0;
@@ -332,7 +368,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 0;
