--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,7 @@
 <section class="contact">
-    <div class="container contact-container">
-        <ul class="list contact-list">
+    <div class="container contact-rel">
+        <div class="contact-position">
+            <ul class="list contact-list">
             <li class="contact-card">
                 <span  class="contact-label-cafe">CAFE</span>
                 <div class="contact-card-block">
@@ -52,14 +53,27 @@
                     <a class="link contact-card-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                 </address>
             </li>
-        </ul>
-        <ul class="list contact-list-btn">
-            <li class="contact-list-btn-item"><button class="btn-secondary contact-btn">Our Locations</button></li>
-            <li class="contact-list-btn-item"><button class="btn-third contact-btn">Franchise</button></li>
-        </ul>
+            </ul>
+            <ul class="list contact-list-btn">
+                <li class="contact-list-btn-item">
+                    <button class="btn-secondary contact-btn">Our Locations
+                        <svg class="contact-svg-secondary">
+                            <use href="./images/icons/sprite.svg#tip"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="contact-list-btn-item">
+                    <button class="btn-third contact-btn">Franchise
+                        <svg class="contact-svg-third">
+                            <use href="./images/icons/sprite.svg#tip"></use>
+                        </svg>
+                </button>
+                </li>
+            </ul>
+        </div>
     </div>
 </section>
 
 <!-- <svg>
-    <use href="./images/icons/symbol-defs.svg#tip"></use>
+    <use href="./images/icons/sprite.svg#tip"></use>
 </svg> -->
