--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,19 +1,38 @@
 .contact {
-  // position: relative;
+  width: 100%;
+  height: 1426px;
   background-color: rgba(255, 245, 246, 1);
 
+  @media (min-width: 768px) {
+    height: 610px;
+  }
+
   @media (min-width: 1200px) {
-    background-image: src('../images/pictures/contacts/contact-bg@1x.png');
+    height: 620px;
+    background-image: url('../images/pictures/contacts/contact-bg@1x.png');
     background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top right;
   }
 }
 
-// .contact-container {
-//   position: absolute;
-//   top: 84px;
-//   left: 0;
-//   right: 0;
-// }
+.contact-rel {
+  position: relative;
+}
+
+.contact-position {
+  position: absolute;
+  top: -84px;
+  left: 0;
+  right: 0;
+
+  @media (min-width: 768px) {
+    top: -78px;
+  }
+  @media (min-width: 1200px) {
+    top: -102px;
+  }
+}
 
 .contact-list {
   display: flex;
@@ -28,6 +47,7 @@
 
 .contact-card {
   max-width: 220px;
+  width: calc(100% - 70px);
   padding: 43px 20px;
   background: $white;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -225,9 +245,23 @@
 }
 
 .contact-btn {
+  // display: inline-flex;
+  // justify-content: center;
+  // align-items: center;
+  // text-align: center;
   width: 161px;
   height: 44px;
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
+}
+
+.contact-svg-secondary {
+  width: 7px;
+  height: 14px;
+}
+
+.contact-svg-third {
+  width: 7px;
+  height: 14px;
 }
