--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -5,6 +5,10 @@
     padding-top: 102px;
     padding-bottom: 28px;
   }
+
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 45px;
+  }
 }
 
 .hero .container {
@@ -19,6 +23,10 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 19px;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 56px;
+  }
 }
 
 .hero-box {
@@ -134,6 +142,11 @@
     height: 16px;
     border-radius: 50%;
     background-color: $color-main;
+
+    @media screen and (min-width: $desktop) {
+      width: 30px;
+      height: 30px;
+    }
   }
 
   &:not(:last-child) {
@@ -150,6 +163,11 @@
   text-transform: uppercase;
 
   color: $color-accent;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 46px;
+    line-height: 1.13;
+  }
 }
 
 .places-text {
@@ -159,6 +177,11 @@
   line-height: 1.25;
 
   color: $color-main;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.3;
+  }
 }
 
 .eco {
@@ -172,9 +195,11 @@
 
 .eco-content {
   max-width: 115px;
+  padding-bottom: 6px;
 
   @media screen and (min-width: $desktop) {
     max-width: 200px;
+    padding-bottom: 11px;
   }
 }
 
@@ -198,6 +223,8 @@
   color: $color-main;
 
   @media screen and (min-width: $desktop) {
+    margin-bottom: 20px;
+
     font-size: 14px;
     line-height: 1.4;
   }
@@ -209,6 +236,11 @@
   height: 18px;
   background-color: $color-main;
   border-radius: 50%;
+
+  @media screen and (min-width: $desktop) {
+    width: 26px;
+    height: 26px;
+  }
 }
 
 .hero-circle {
@@ -246,7 +278,7 @@
 
   @media screen and (min-width: $tablet) {
     right: 233px;
-    bottom: -28px;
+    bottom: -45px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -266,6 +298,6 @@
 
   @media screen and (min-width: $desktop) {
     right: 109px;
-    bottom: -28px;
+    bottom: -45px;
   }
 }
