Добавляет стили для текста слайдера

--- a/src/sass/layouts/_slider.scss
+++ b/src/sass/layouts/_slider.scss
@@ -17,36 +17,83 @@
   }
 
   &-review {
-    padding: 45px 50px 25px;
-    background-color: #fafafa;
+    width: 280px;
+    margin: 0 auto;
+    padding: 45px 50px 10px;
+
+    background: url(../images/pictures/slider/quotes.png) no-repeat top 30px
+      left 65px #fafafa;
 
     @include for-size(tablet) {
-      padding: 45px 40px 35px;
+      width: 620px;
+      margin: 0 auto 30px;
+      padding: 45px 40px 10px;
+
+      background-position: top 31px left 24px;
     }
 
     @include for-size(desktop) {
-      padding: 45px 40px 40px;
+      width: 918px;
+      margin: 0 auto 24px;
+      padding: 45px 40px 10px;
+
+      background-position: top 35px left 51px;
     }
   }
 
   &-text {
     @include fonts(12px, 500, 2.5em);
-    margin: 0 auto;
+    margin: 0 auto 15px;
     padding: 0 15px;
     width: 180px;
-    background: url(../images/pictures/slider/line.png) no-repeat top 0px left 0,
-      url(../images/pictures/slider/line.png) no-repeat top 20px left 0;
+    background: url(../images/pictures/slider/vector.svg) no-repeat top 27px
+        left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 57px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 87px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 117px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 147px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 177px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 207px left 0,
+      url(../images/pictures/slider/vector.svg) no-repeat top 237px left 0;
     @include for-size(tablet) {
       @include fonts(14px, 500, 2.5em);
       width: 524px;
+
+      background: url(../images/pictures/slider/vector-tablet.svg) no-repeat top
+          30px left 0,
+        url(../images/pictures/slider/vector-tablet.svg) no-repeat top 65px left
+          0,
+        url(../images/pictures/slider/vector-tablet.svg) no-repeat top 100px
+          left 0;
     }
     @include for-size(desktop) {
       @include fonts(16px, 500, 2.5em);
       width: 813px;
+      padding: 0 22px;
+
+      background: url(../images/pictures/slider/vector-desktop.svg) no-repeat
+          top 33px left 0,
+        url(../images/pictures/slider/vector-desktop.svg) no-repeat top 72px
+          left 0;
     }
 
     & span:not(:last-child) {
       padding-bottom: 5px;
+    }
+  }
+
+  &-name {
+    @include fonts(14px, 500, 1.85em);
+    margin-top: 18px;
+
+    @include for-size(tablet) {
+      @include fonts(16px, 500, 1.81em);
+      margin-top: 14px;
+    }
+
+    @include for-size(desktop) {
+      @include fonts(20px, 500, 1.85em);
+      margin-top: 15px;
     }
   }
 }
