--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -26,6 +26,7 @@
 
   @media screen and (min-width: $desktop) {
     margin-bottom: 56px;
+    padding-left: 70px;
   }
 }
 
@@ -82,7 +83,7 @@
   margin-right: 8px;
 
   @media screen and (min-width: $desktop) {
-    margin-right: 17px;
+    margin-right: 15px;
   }
 }
 
@@ -101,6 +102,7 @@
 
   background-color: $color-main;
   color: $color-accent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -208,6 +210,10 @@
 
   @media screen and (min-width: $tablet) {
     display: inline-block;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 30px;
   }
 }
 
