Добавлені бекграунд картинки та надписи для планшету секція Герой

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,8 +2,11 @@
   <div class="container">
     <h1 class="hero__title">ice cream <br> made with <br><span class="hero__title__text">passion</span></h1>
     <button type="button" class="hero__button">Products</button>
-    <button type="button" class="hero__button recipe">How its made</button>
-    <!-- <img src="../images/hero/mobile/ice-cream.png" alt="Описание" /> -->
+    <button type="button" class="hero__button recipe">How its made?</button>
+    <button type="button" class="hero__button sell" >Buy now</button>
+    <div class="hero__text__box">
+      <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+    </div>
   </div>
   <!-- Ваш код здесь -->
 </div> 
