--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,3 +1,7 @@
+.hero {
+  position: relative;
+  z-index: 1000;
+}
 .page-header {
   margin-left: auto;
   margin-right: auto;
@@ -10,14 +14,14 @@
 
   @media screen and (min-width: 320px) {
     width: 320px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
     height: 400px;
-    background-image: url(../images/hero/tablet/ice-cream.png);
-    background-position: bottom right 30%;
+    background-image: url(../images/hero/tablet/baby.png),
+      url(../images/hero/tablet/ice-cream.png),
+      url(../images/hero/tablet/milk.png);
+    background-position: bottom right 5%, bottom right 30%, bottom 10% left 5%;
   }
 }
 .hero__title {
@@ -27,13 +31,13 @@
   font-style: normal;
   font-weight: 400;
   font-size: 26px;
-  line-height: 30px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #ffffff;
 
   @media screen and (min-width: 768px) {
     padding-top: 102px;
+    font-size: 22px;
   }
 }
 .hero__title__text {
@@ -43,6 +47,10 @@
   font-size: 48px;
   line-height: 96.5%;
   color: #d41443;
+
+  @media screen and (min-width: 768px) {
+    font-size: 34px;
+  }
 }
 .hero__button {
   display: inline-flex;
@@ -85,6 +93,78 @@
 .hero__button.recipe:hover {
   background: #ecebeb;
 }
+.hero__button.sell {
+  margin: 0;
+  position: absolute;
+  left: 574px;
+  top: 38px;
+  height: 40px;
+  padding-right: 47px;
+  padding-left: 47px;
+
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  background: #ffffff;
+  color: #d41443;
+}
+.hero__button.sell::after {
+  display: inline-block;
+  position: absolute;
+  top: 42%;
+  left: 76%;
+  content: '';
+  width: 10px;
+  height: 12px;
+
+  background: url(../images/svg/bracket-right.svg);
+  background-repeat: no-repeat;
+}
+.hero__text__box {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    left: 154px;
+    top: 292px;
+
+    width: 114px;
+    height: 48px;
+  }
+}
+.hero__text__box::after {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  margin-top: 8px;
+  width: 18px;
+  height: 18px;
+  border-radius: 20px;
+
+  background-image: url(../images/hero/tablet/arrow-right.jpg);
+}
+.hero__text {
+  margin: 0;
+
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 8px;
+
+  color: #ffffff;
+}
+/* .ice-cream {
+  position: absolute;
+  left: 35px;
+  top: 83px;
+  z-index: 0;
+} */
 //пример для фона загрузки разных размеров и плотностей
 // body {
 //   @media screen and(max-width: $tablet - 1) {
