--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -13,6 +13,14 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top right;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/pictures/contacts/contact-bg@2x.png');
+    }
   }
 }
 
@@ -244,7 +252,7 @@
   }
 }
 
-.contact-btn {
+.contact-btn-secondary {
   // display: inline-flex;
   // justify-content: center;
   // align-items: center;
@@ -254,14 +262,44 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
+
+  @media (min-width: 768px) {
+    width: 191px;
+    height: 44px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 198px;
+    height: 44px;
+  }
+}
+
+.contact-btn-third {
+  width: 161px;
+  height: 44px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+
+  @media (min-width: 768px) {
+    width: 174px;
+    height: 44px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 180px;
+    height: 44px;
+  }
 }
 
 .contact-svg-secondary {
-  width: 7px;
-  height: 14px;
+  width: 8px;
+  height: 10px;
+  fill: $white;
 }
 
 .contact-svg-third {
-  width: 7px;
-  height: 14px;
+  width: 8px;
+  height: 10px;
+  fill: $primary-accent;
 }
