--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -56,17 +56,21 @@
             </ul>
             <ul class="list contact-list-btn">
                 <li class="contact-list-btn-item">
-                    <button class="btn-secondary contact-btn">Our Locations
+                    <button class="btn-secondary contact-btn-secondary">
+                        <a class="link link-contact" href="https://goo.gl/maps/kUXRjYNcF4qok5H59" target="blank" rel="noreferrer noopener">Our Locations
                         <svg class="contact-svg-secondary">
                             <use href="./images/icons/sprite.svg#tip"></use>
                         </svg>
+                        </a>
                     </button>
                 </li>
                 <li class="contact-list-btn-item">
-                    <button class="btn-third contact-btn">Franchise
+                    <button class="btn-third contact-btn-third">
+                        <a class="link link-contact" href="https://franchbook.ru/franshizy/kompaniya/oeskimo/" target="blank" rel="noreferrer noopener">Franchise
                         <svg class="contact-svg-third">
                             <use href="./images/icons/sprite.svg#tip"></use>
                         </svg>
+                        </a>
                 </button>
                 </li>
             </ul>
