добавлены все стили для хедера и модального меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,31 +2,28 @@
   <div class="container">
     <nav class="header-nav">
 
-      <a header="logo link" href="#">
-        <img class="logo" src="./images/vector/logo1.svg" width="199" alt="Logo">
+      <a class="logo link" href="#" id="home">
+        <img class="logo-img" src="./images/vector/logo1.svg" width="199" alt="Logo">
       </a>
 
-      <ul class="navigation list">
-        <li class="navigation-item list"><a class="navigation-link link" href="#">Home</a></li>
-        <li class="navigation-item list"><a class="navigation-link link" href="#">About us</a></li>
-        <li class="navigation-item list"><a class="navigation-link link" href="#">How it’s made?</a></li>
-        <li class="navigation-item list"><a class="navigation-link link" href="#">Our products</a></li>
-        <li class="navigation-item list"><a class="navigation-link link" href="#">Contact</a></li>
+      <ul class="site-nav list">
+        <li class="nav-item list"><a class="nav-link link active" href="#home">Home</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#">About us</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#">How it’s made?</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#">Our products</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#">Contact</a></li>
       </ul>
 
       <div class="nav-buttons">
-        <button type="button" class="menu-button-open" aria-label="Mobile menu open" data-modal-open> 
-          <svg class="menu-icon" width="20" height="12">
-            <use class="icon-burger" href="./images/vector/icon-sprite.svg#icon-burger"></use>
+        <button class="btn-menu-open" type="button" aria-label="Mobile menu open" data-modal-open> 
+          <svg class="menu-open" width="20" height="12">
+            <use class="icon-open" href="./images/vector/icon-sprite.svg#icon-burger"></use>
           </svg>
         </button>
   
-        <button type="button" class="button-purchase" aria-label="Button to buy a product">Buy now</button>
+        <button class="btn-purchase" type="button" aria-label="Button to buy a product">Buy now</button>
       </div>
   
-
-
     </nav>
   </div>
-
 </header>
