--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,6 @@
 @import './utils/breakpoints';
 @import './components/container';
 @import './layouts/header';
+@import './components/modal-menu';
 @import './layouts/hero';
-@import './layouts/locations'
+@import './layouts/locations';
