--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -4,7 +4,7 @@
 
   @media screen and (min-width: $tablet){
     position: absolute;
-    left: calc(50%);
+    left: 50%;
     transform: translateX(-50%);
     background-color: transparent;
     z-index: 98;
@@ -12,7 +12,6 @@
 }
 
 .header-nav {
-  // position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,42 +24,15 @@
   }
 
   @media screen and (min-width: $desktop){
+    align-items: flex-end;
     padding-top: 25px;
   }
 }
 
-.navigation {
-  @media screen and (max-width: 1279px) {
-    display: none;
+.logo {
+  @media screen and (min-width: $desktop){
+    padding-bottom: 7px;
   }
-  display: flex;
-}
-
-.navigation-item {
-  padding-right: 35px;
-  &:last-child {
-    padding-right: 0;
-  }
-}
-
-.navigation-link {
-  display: inline-block;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  
-  color: $color-main;
-  font-family: 'DM Sans', sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.3;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
- 
-
-  &:focus,
-  &:hover {
-    color: $color-accent;
-}
 }
 
 .nav-buttons {
@@ -68,77 +40,19 @@
   align-items: center;
 }
 
-.menu-button-open {
+.btn-menu-open {
   border: none;
   background-color: transparent;
 
-  @media screen and (min-width:1280px) {
+  @media screen and (min-width: $desktop) {
     display: none;
   }
 }
 
-.nav-buttons .button-purchase {
-  @media screen and (max-width: 739px) {
-    display: none;
-  }
-  margin-bottom: 0;
-  margin-left: 30px;
+.btn-purchase {
   width: 160px;
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: calc(100% - 254px);
-  
-  background-color: $color-background-menu;
-  opacity: 1;
-  overflow-y: scroll;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 99;
-
-  &.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
-}
-
-.is-hidden .menu-content {
-  transform: translateX(100%);
-}
-
-.menu-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  width: 254px;
-  height: 100%;
-  padding-top: 60px;
-  background-color: inherit;
-  transform: translateX(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-
-.menu-button-close {
-  position: absolute;
-  top: 23px;
-  right: 28px;
-  border: none;
-  background-color: transparent;
-}
-
-.button-purchase {
-  width: 209px;
   min-height: 44px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 19px;
+  margin-left: 30px;
   color: $color-accent;
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
@@ -153,36 +67,58 @@
   &:hover {
     background-color: $color-accent-button-2;
   }
+
+  @media screen and (max-width: 739px) {
+    display: none;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 0;
+  }
+}
+
+.site-nav {
+  display: flex;
+
+  @media screen and (max-width: 1279px) {
+    display: none;
+  }
 }
 
 .nav-item {
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: $color-menu-separator;
+  @media screen and (min-width: $desktop){
+    padding-right: 35px;
 
-  &:last-child {
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: $color-menu-separator;
+    &:last-child {
+      padding-right: 0;
+    }
   }
- 
 }
 
 .nav-link {
   display: inline-block;
-  width: 100%;
-  padding-top: 11px;
-  padding-bottom: 12px;
-  padding-left: 21px;
+  padding-top: 17px;
+  padding-bottom: 17px;
   color: $color-main;
   font-family: 'DM Sans', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 1.3;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:focus,
-  &:hover{
+  &:hover {
     color: $color-accent;
-  }  
+  }
+  
+  &.active {
+    color: $color-accent;
+  }
+
+  @media screen and (min-width: $desktop){
+    padding-top: 11px;
+    padding-bottom: 11px;
+  }
 }
+
+
