--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -296,6 +296,11 @@
   width: 8px;
   height: 10px;
   fill: $white;
+
+  .contact-btn-secondary:hover &,
+  .contact-btn-secondary:focus & {
+    fill: $primary-accent;
+  }
 }
 
 .contact-svg-third {
