--- a/src/partials/outlets.html
+++ b/src/partials/outlets.html
@@ -2,62 +2,62 @@
     <div class="content-container">
         <ul class="outlets-list">
             <li class="outlets-item">
-                <div class="subtitle">CAFE</div>
-                <h3 class="outlets-title">Chicago</h3>
+                <h3 class="subtitle">CAFE</h3>
+                <p class="outlets-title">Chicago</p>
                 <p class="outlets-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="timetable-list">
-                    <li>
-                        <h3 class="timetable-title">Monday - Friday</h3>
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Monday - Friday</p>
                         <p class="timetable-desc">06:00 AM - 10:00 PM</p>
                     </li>
-                    <li>
-                        <h3 class="timetable-title">Saturday - Sunday</h3>
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Saturday - Sunday</p>
                         <p class="timetable-desc">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
                 <ul class="outlets-contacts">
-                    <li class="contacts-item">+61(0) 383 766 284</li>
-                    <li class="contacts-item">noreply@envato.com</li>
+                    <li><a class="contacts-item" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+                    <li><a class="contacts-item" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
+                </ul>
+            </li>
+
+            <li class="outlets-item">
+                <h3 class="subtitle-food">FOODTRUCK</h3>
+                <p class="outlets-title">Los Angeles</p>
+                <p class="outlets-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <ul class="timetable-list">
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Monday - Friday</p>
+                        <p class="timetable-desc">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Saturday - Sunday</p>
+                        <p class="timetable-desc">08:00 AM - 16:00 PM</p>
+                    </li>
+                </ul>
+                <ul class="outlets-contacts">
+                    <li><a class="contacts-item" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+                    <li><a class="contacts-item" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
                 </ul>
             </li>
             <li class="outlets-item">
-                <div class="subtitle-food">FOODTRUCK</div>
-                <h3 class="outlets-title">Los Angeles</h3>
+                <h3 class="subtitle">CAFE</h3>
+                <p class="outlets-title">New York</p>
                 <p class="outlets-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="timetable-list">
-                    <li>
-                        <h3 class="timetable-title">Monday - Friday</h3>
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Monday - Friday</p>
                         <p class="timetable-desc">06:00 AM - 10:00 PM</p>
                     </li>
-                    <li>
-                        <h3 class="timetable-title">Saturday - Sunday</h3>
+                    <li class="outlets-time-item">
+                        <p class="timetable-title">Saturday - Sunday</p>
                         <p class="timetable-desc">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
                 <ul class="outlets-contacts">
-                    <li class="contacts-item">+61(0) 383 766 284</li>
-                    <li class="contacts-item">noreply@envato.com</li>
+                    <li><a class="contacts-item" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+                    <li><a class="contacts-item" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
                 </ul>
-            </li>
-            <li class="outlets-item">
-                <div class="subtitle">CAFE</div>
-                <h3 class="outlets-title">New York</h3>
-                <p class="outlets-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <ul class="timetable-list">
-                    <li>
-                        <h3 class="timetable-title">Monday - Friday</h3>
-                        <p class="timetable-desc">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li>
-                        <h3 class="timetable-title">Saturday - Sunday</h3>
-                        <p class="timetable-desc">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <ul class="outlets-contacts">
-                    <li class="contacts-item">+61(0) 383 766 284</li>
-                    <li class="contacts-item">noreply@envato.com</li>
-                </ul>
-            </li>
-        </ul>
+            </li>            
     </div>
 </section>
