--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -1,8 +1,15 @@
 .outlets {
-  padding-right: 30px;
-  padding-left: 30px;
-  align-items: center;
   background-color: $second-bg-color;
+}
+.outlets .content-container {
+  position: relative;
+  height: 1291px;
+}
+.outlets-list {
+  position: absolute;
+  left: 50px;
+  right: 50px;
+  top: -84px;
 }
 .outlets-item {
   width: 100%;
@@ -67,7 +74,6 @@
   border-bottom: 1px solid #e1e1e1;
 }
 .timetable-title {
-  margin-bottom: 10px;
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
@@ -75,8 +81,16 @@
 
   color: $first-text-color;
 }
+.outlets-time-item {
+  &:not(:first-child) {
+    padding-top: 10px;
+    padding-bottom: 25px;
+  }
+  &:last-child {
+    border-bottom: 1px solid #e1e1e1;
+  }
+}
 .timetable-desc {
-  margin-bottom: 20px;
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
@@ -84,13 +98,16 @@
 
   color: $second-title-color;
 }
+.outlets-contacts {
+  margin-top: 25px;
+}
 .contacts-item {
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
-
   color: $second-text-color;
+  text-decoration: none;
 }
 
 // border-bottom: 1px solid #E1E1E1;
