--- a/src/sass/layouts/_section-composition.scss
+++ b/src/sass/layouts/_section-composition.scss
@@ -1,5 +1,10 @@
+.visually-hidden {
+    @extend %visually-hidden;
+}
+
 .composition {
     margin-bottom: 80px;
+    background-color: $section-background;
     @include for-size(tablet) {
         margin-bottom: 121px;
     }
@@ -12,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: $section-background;
+    /* background-color: $section-background; */
     @include for-size(tablet) {
         display: flex;
         flex-direction: row;
