--- a/src/sass/layouts/_section-products-item.scss
+++ b/src/sass/layouts/_section-products-item.scss
@@ -3,15 +3,37 @@
   padding-top: 160px;
   padding-right: 40px;
   padding-left: 40px;
-  width: 280px;
   height: 485px;
 
   color: $color-main;
-  background: $color-main-product-1;
+  background-color: $color-main-product-1;
   border-radius: 24px;
+
+  &:not(:last-child) {
+    @media screen and (max-width: 739px) {
+      margin-bottom: 130px;
+    }
+  }
+  @media screen and (min-width: $tablet) {
+    width: 220px;
+    padding-left: 11px;
+    padding-right: 11px;
+  }
+
+  .beige-item {
+    background-color: $color-main-product-2;
+  }
+
+  .green-item {
+    background-color: $color-main-product-3;
+  }
 
   .product-content {
     margin-bottom: 30px;
+
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 40px;
+    }
 
     .product-item-title {
       margin: 0;
@@ -20,6 +42,12 @@
       font-weight: 400;
       font-size: 20px;
       line-height: 1.5;
+      letter-spacing: 0.04em;
+
+      &::after {
+        content: '';
+        display: block;
+      }
     }
 
     .product-item-text {
@@ -27,14 +55,20 @@
       font-family: DM Sans;
       font-weight: 700;
       font-size: 14px;
+      letter-spacing: 1.5;
       text-align: center;
       letter-spacing: 0.04em;
 
       color: $color-main;
+
+      @media screen and (min-width: $tablet) {
+        letter-spacing: 1.78;
+      }
     }
   }
 
   .product-link {
+    display: inline-block;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -46,9 +80,10 @@
     position: absolute;
     top: -113px;
     left: 16px;
-  }
 
-  .beige-item {
-    background-color: $color-main-product-2;
+    @media screen and (min-width: $tablet) {
+      top: -21%;
+      left: 0%;
+    }
   }
 }
