--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -1,11 +1,16 @@
 .section-products {
   background-color: $color-main;
-  padding-top: 120px;
+  padding-top: 122px;
   padding-bottom: 98px;
 
   text-align: center;
 
+  @media screen and (min-width: $tablet) {
+    padding-bottom: 112px;
+  }
+
   .product-benefit {
+    margin-top: 0;
     margin-bottom: 15px;
 
     font-family: Titan One;
@@ -18,9 +23,15 @@
     text-transform: uppercase;
 
     color: $color-background-hero;
+
+    @media screen and (min-width: $tablet) {
+      font-size: 26px;
+      line-height: 1.15;
+    }
   }
 
   .product-title {
+    margin-top: 0;
     margin-bottom: 144px;
 
     font-family: Titan One;
@@ -32,5 +43,18 @@
     text-transform: uppercase;
 
     color: $color-accent;
+
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 150px;
+      font-size: 48px;
+      line-height: 1.145;
+    }
+  }
+
+  .product-list {
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
