Додав на таблетку секцію з к-ть кафе

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,6 +7,8 @@
     <div class="hero__text__box">
       <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
     </div>
+    <div class="hero__text cafe">16 <span class="hero__span">cafes</span> </div>
+    <div class="hero__text truck">23 <span class="hero__span">food trucks</span> </div>
   </div>
   <!-- Ваш код здесь -->
 </div> 
