--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -159,12 +159,69 @@
 
   color: #ffffff;
 }
-/* .ice-cream {
+.hero__text.cafe {
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
-  left: 35px;
-  top: 83px;
-  z-index: 0;
+  width: 43px;
+  height: 44px;
+  left: 691px;
+  top: 94px;
+
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 32px;
+
+  text-align: right;
+  letter-spacing: 0.04em;
+
+  color: #d41443;
+}
+.hero__text.truck {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  position: absolute;
+  width: 56px;
+  height: 43px;
+  left: 683px;
+  top: 151px;
+
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 32px;
+
+  text-align: right;
+  letter-spacing: 0.04em;
+
+  color: #d41443;
+}
+/* .hero__text.truck::before {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  margin-top: 8px;
+  width: 20px;
+  height: 18px;
+  border-radius: 20px;
+
+  background-image: url(../);
+  background-repeat: no-repeat;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
 } */
+.hero__span {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 10px;
+
+  color: #ffffff;
+}
 //пример для фона загрузки разных размеров и плотностей
 // body {
 //   @media screen and(max-width: $tablet - 1) {
