--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -26,6 +26,17 @@ img {
   height: auto;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 .container {
   width: 100%;
   padding-left: 15px;
