--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,10 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+
 @import './base/normalize';
 @import './base/container';
 @import './base/common';
 @import './utils/mixins';
 @import './utils/vars';
+@import './swiper-slide/swiper';
