destop падинг секции

--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -9,6 +9,11 @@
     padding-bottom: 112px;
   }
 
+  @media screen and (min-width: $desktop) {
+    padding-top: 126px;
+    padding-bottom: 120px;
+  }
+
   .product-benefit {
     margin-top: 0;
     margin-bottom: 15px;
@@ -17,7 +22,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 1, 16;
+    line-height: 1.16;
 
     text-align: center;
     text-transform: uppercase;
@@ -27,6 +32,12 @@
     @media screen and (min-width: $tablet) {
       font-size: 26px;
       line-height: 1.15;
+    }
+
+    @media screen and (min-width: $desktop) {
+      font-size: 30px;
+      line-height: 34px;
+      letter-spacing: 0.04em;
     }
   }
 
