--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -96,3 +96,38 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+.slider-hidden {
+  display: none;
+}
+.slider-slick .slick-dots {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0;
+  width: 72px;
+}
+.slick-dots button {
+  width: 12px;
+  height: 12px;
+  border: 0;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  outline: 0;
+  overflow: hidden;
+  &:hover {
+    //   background-color: #9b9797;
+    transform: scale(1.4);
+  }
+  transition-property: transform;
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+}
+.slick-active button {
+  background-image: url(./../images/home.svg);
+  border-radius: 0;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
