--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,12 +17,16 @@
 
             <ul class="places list">
                 <li class="places-item">
-                    <p class="places-number">16</p>
-                    <p class="places-text">cafes</p>
+                    <div class="places-box">
+                        <p class="places-number">16</p>
+                        <p class="places-text">cafes</p>
+                    </div>
                 </li>
                 <li class="places-item">
-                    <p class="places-number">23</p>
-                    <p class="places-text">food trucks</p>
+                    <div class="places-box">
+                        <p class="places-number">23</p>
+                        <p class="places-text">food trucks</p>
+                    </div>
                 </li>
             </ul>
         </div>
