--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -15,6 +15,7 @@
   position: relative;
 
   @media screen and (max-width: 739px) {
+    overflow: hidden;
     min-height: 440px;
   }
 }
@@ -53,6 +54,7 @@
   color: $color-main;
 
   @media screen and (min-width: $tablet) {
+    max-width: 180px;
     font-size: 22px;
   }
 
@@ -137,9 +139,12 @@
 }
 
 .places-item {
+  position: relative;
+
   &::before {
     content: '';
     display: block;
+
     width: 16px;
     height: 16px;
     border-radius: 50%;
@@ -150,10 +155,14 @@
       height: 30px;
     }
   }
+}
 
-  &:not(:last-child) {
-    margin-bottom: 13px;
-  }
+.places-item:not(:last-child) {
+  margin-bottom: 41px;
+}
+
+.places-box {
+  text-align: right;
 }
 
 .places-number {
@@ -284,7 +293,7 @@
 
   @media screen and (min-width: $tablet) {
     right: 233px;
-    bottom: -45px;
+    bottom: -28px;
   }
 
   @media screen and (min-width: $desktop) {
