Добавляет стили в футер

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
  <section class="footer">
-     <div class="footer-container">
+     <div class="container footer-container">
     <div class="footer-text">
         <span>homemade ice cream made</span> <br>
         <span class="text-accent">with passion</span>
