загружены png через <picure>

--- a/src/sass/layouts/_section-products-item.scss
+++ b/src/sass/layouts/_section-products-item.scss
@@ -16,8 +16,17 @@
   }
   @media screen and (min-width: $tablet) {
     width: 220px;
+    padding-top: 152px;
     padding-left: 11px;
     padding-right: 11px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 329px;
+    height: 525px;
+    padding-top: 163px;
+    padding-left: 44px;
+    padding-right: 44px;
   }
 
   .beige-item {
@@ -35,6 +44,10 @@
       margin-bottom: 40px;
     }
 
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 62px;
+    }
+
     .product-item-title {
       margin: 0;
       padding-bottom: 30px;
@@ -47,6 +60,12 @@
       &::after {
         content: '';
         display: block;
+      }
+
+      @media screen and (min-width: $desktop) {
+        padding-bottom: 32px;
+        font-size: 30px;
+        line-height: 1.13;
       }
     }
 
@@ -63,6 +82,11 @@
 
       @media screen and (min-width: $tablet) {
         letter-spacing: 1.78;
+      }
+
+      @media screen and (min-width: $desktop) {
+        font-size: 16px;
+        line-height: 1.75;
       }
     }
   }
