--- a/src/sass/layouts/_how-made.scss
+++ b/src/sass/layouts/_how-made.scss
@@ -13,6 +13,7 @@ picture {
 .section_how_made {
   background-color: $section-bg;
   text-align: center;
+  padding-bottom: 40px;
   @include for-size(mobile-only) {
     background-image: url(../images/pictures/icons/decor_milk.svg);
     background-repeat: no-repeat;
