--- a/src/sass/swiper-slide/_swiper.scss
+++ b/src/sass/swiper-slide/_swiper.scss
@@ -24,11 +24,11 @@
   & .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
-    background-color: red;
+    background-color: getColor('sliderActiv');
   }
 
   &__text {
-    font-family: 'DM Sans';
+    font-family: $main-font;
     font-size: 16px;
     line-height: 28px;
     letter-spacing: 0.02em;
@@ -36,7 +36,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 930px;
-    background-color: #fafafa;
+    background-color: getColor('sliderBgrd');
     background-image: url(../images/slider-test/devil.svg);
     background-size: 55px;
     background-repeat: no-repeat;
@@ -44,19 +44,19 @@
 
     &-decore {
       display: block;
-      border-bottom: 1px solid #e1e1e1;
+      border-bottom: 1px solid getColor('sliderBorder');
     }
   }
   &__paragraph {
-    font-family: 'DM Sans';
+    font-family: $main-font;
     font-size: 16px;
     text-align: center;
   }
-  &__decore {
+  &__decore-circle {
     display: inline-block;
     width: 4px;
     height: 4px;
     border-radius: 50%;
-    background-color: red;
+    background-color: getColor('btnActiv');
   }
 }
