--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -30,7 +30,7 @@
   margin-right: auto;
   @include for-size(desktop) {
     position: absolute;
-    left: -5%;
+    left: -4%;
   }
 }
 .header-burger-button {
@@ -98,6 +98,9 @@
 .header-menu.is-open {
   display: block;
   text-align: center;
+  @include for-size(mobile) {
+    z-index: 20;
+  }
   @include for-size(tablet) {
     position: absolute;
     padding-top: 85px;
@@ -125,7 +128,7 @@
     }
     @include for-size(desktop) {
       margin-bottom: 0px;
-      margin-left: 90px;
+      margin-left: 110px;
     }
   }
 }
@@ -148,6 +151,7 @@
 }
 .header-menu.is-open .header-menu-tablet {
   text-align: left;
+
   @include for-size(tablet) {
     display: block;
   }
@@ -175,7 +179,7 @@
   }
   @include for-size(desktop) {
     margin: 0px;
-    margin-left: 90px;
+    margin-left: 110px;
   }
 }
 .header-menu-svg {
