переименованы классы для li

--- a/src/sass/layouts/_section-products-item.scss
+++ b/src/sass/layouts/_section-products-item.scss
@@ -29,14 +29,6 @@
     padding-right: 44px;
   }
 
-  .beige-item {
-    background-color: $color-main-product-2;
-  }
-
-  .green-item {
-    background-color: $color-main-product-3;
-  }
-
   .product-content {
     margin-bottom: 30px;
 
@@ -109,5 +101,17 @@
       top: -21%;
       left: 0%;
     }
+
+    @media screen and (min-width: $desktop) {
+      left: 12%;
+    }
+  }
+
+  .beige-bg {
+    background-color: $color-main-product-2;
+  }
+
+  .green-bg {
+    background-color: $color-main-product-3;
   }
 }
