--- a/src/partials/section-made.html
+++ b/src/partials/section-made.html
@@ -16,8 +16,19 @@
         media="(max-width: 767px)"
       />
       <source
+        srcset="./images/made/made-516.webp 1x, ./images/made/made-1032.webp 2x"
+        type="image/webp"
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="./images/made/made-340.webp 1x, ./images/made/made-680.webp 2x"
+        type="image/webp"
+        media="(min-width: 768px)"
+      />
+      <source
         srcset="./images/made/made-280.webp 1x, ./images/made/made-560.webp 2x"
         type="image/webp"
+        media="(max-width: 767px)"
       />
       <img
         class="made-photo"
@@ -26,21 +37,23 @@
       />
     </picture>
     <div class="made-container">
-      <p class="made-main-text">
-        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-        cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-        justo fringilla.
-      </p>
-      <p class="made-text">
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-        Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-        suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-        tincidunt.
-      </p>
-      <p class="made-text">Aliquam erat volutpat. Aenean accumsan.</p>
+      <div class="made-content">
+        <p class="made-main-text">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
+        <p class="made-text">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
+        </p>
+        <p class="made-text">Aliquam erat volutpat. Aenean accumsan.</p>
+      </div>
       <button class="made-button">
         Read more
-        <svg class="arrow-to-right" width="10" height="10">
+        <svg class="icon-made-arrow" width="7" height="10">
           <use href="./images/sprite.svg#arrow-to-right"></use>
         </svg>
       </button>
