Исправил лого,добавил релайтив на контейнер

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -20,12 +20,12 @@
 
   @media screen and(min-width: 1200px) {
     position: absolute;
-    top: 33px;
+    top: -4px;
     left: 6px;
   }
 
   @media screen and(min-width: 1440px) {
-    left: 125px;
+    // left: 125px;
   }
 }
 
@@ -130,7 +130,7 @@
   }
 
   @media screen and(min-width: 1200px) {
-    margin-left: 110px;
+    margin-left: 100px;
   }
 }
 
