--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -1,6 +1,7 @@
 .container {
   margin: 0 auto;
   width: 100%;
+  position: relative;
 
   @media screen and (min-width: 320px) {
     max-width: 100%;
