--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -7,6 +7,7 @@
   }
 
   @media screen and (min-width: $desktop) {
+    padding-top: 151px;
     padding-bottom: 45px;
   }
 }
@@ -60,7 +61,7 @@
 
   @media screen and (min-width: $desktop) {
     max-width: 277px;
-    font-size: 37px;
+    font-size: 24px;
   }
 
   .text {
@@ -271,7 +272,7 @@
   background-color: $color-background-hero;
 
   @media screen and (min-width: $tablet) {
-    width: 324;
+    width: 324px;
     height: 322px;
     left: 293px;
     bottom: 18px;
@@ -298,6 +299,7 @@
 
   @media screen and (min-width: $desktop) {
     left: 568px;
+    bottom: -45px;
   }
 }
 
