--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,17 @@
 <footer class="footer">
     <div class="content-container">
+        <button class="btn footer-btn footer-red" type="button">
+            Our Locations
+            <svg class="footer-btn-icon-white">
+                <use href="./images/sprite.svg#icon-bracket"></use>
+            </svg>
+        </button>
+        <button class="btn footer-btn" type="button">
+            Franchise
+            <svg class="footer-btn-icon">
+                <use href="./images/sprite.svg#icon-bracket"></use>
+            </svg>
+        </button>
         <div class="footer-content">
         <div class="footer-text">
         <p class="toptext">homemade ice cream made</p>
@@ -30,5 +42,6 @@
             <p class="copyright-text">&copy;2019 - IceCream. 
             All Rights Reserved.</p>
         </div>
+        
     </div>
 </footer>
