--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -18,6 +18,7 @@
 }
 .footer-text {
   @media screen and (max-width: 767px) {
+    padding-top: 113px;
     width: 234px;
     margin-bottom: 43px;
   }
@@ -139,4 +140,48 @@
     padding-top: 9px;
     padding-bottom: 10px;
   }
+}
+.content-container .btn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  padding: 0;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  display: block;
+  width: 161px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3125;
+
+  color: $button-bg-2;
+  background-color: $button-bg-1;
+  border: 0;
+  border-radius: 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: $button-hover-1;
+  }
+}
+.btn.footer-red {
+  background-color: $button-bg-2;
+  color: $button-bg-1;
+  &:hover,
+  &:focus {
+    background-color: $button-hover-2;
+  }
+}
+.footer-btn-icon {
+  margin-left: 8px;
+  width: 7px;
+  height: 10px;
+  stroke: $button-bg-2;
+}
+.footer-btn-icon-white {
+  margin-left: 8px;
+  width: 7px;
+  height: 10px;
+  stroke: $button-bg-1;
 }
