--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,50 +1,73 @@
-<section>
-    <h2>Location</h2>
-    <ul>
-        <li>
-            <h3>CAFE</h3>
-            <p>Chicago</p>
-            <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <p>Monday - Friday<span>06:00 AM - 10:00 PM</span></p>
-            <p>Saturday - Sunday<span>08:00 AM - 16:00 PM</span></p>
-            <address>
-            <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-            <a href="tel:+610383766284">+61(0) 383 766 284</a>
-            </address>
-        </li>
-        <li>
-            <h3>FOOD TRUCK</h3>
-            <p>Los Angeles</p>
-            <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <p>Monday - Friday<span>06:00 AM - 10:00 PM</span></p>
-            <p>Saturday - Sunday<span>08:00 AM - 16:00 PM</span></p>
-            <address>
-            <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-            <a href="tel:+610383766284">+61(0) 383 766 284</a>
-            </address>
-        </li>
-        <li>
-            <h3>CAFE</h3>
-            <p>New York</p>
-            <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-            <p>Monday - Friday<span>06:00 AM - 10:00 PM</span></p>
-            <p>Saturday - Sunday<span>08:00 AM - 16:00 PM</span></p>
-            <address>
-            <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-            <a href="tel:+610383766284">+61(0) 383 766 284</a>
-            </address>
-        </li>
-    </ul>
-    <div>
-        <a href="" target="_blank" rel="noreferrer noopener">Our Locations
-            <svg>
-                <use href=""></use>
-            </svg>
-        </a>
-        <a href="" target="_blank" rel="noreferrer noopener">Franchise
-            <svg>
-                <use href=""></use>
-            </svg>
-        </a>
+<section class="section-locations">
+    <div class="container">
+        <h2 class="locations-title-hidden">Locations</h2>
+        <ul class="locations-list">
+
+            <li class="locations-item">
+                <h3 class="locations-title cafe">Cafe</h3>
+
+                <div class="locations-box">
+                    <h4 class="locations-subtitle">Chicago</h4>
+                    <p class="locations-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+
+                <div class="locations-box">
+                    <h4 class="locations-workdays">Monday - Friday<span class="locations-time">06:00 AM - 10:00 PM</span></p>
+                        <h4 class="locations-workdays">Saturday - Sunday<span class="locations-time">08:00 AM - 16:00 PM</span></p>
+                </div>
+
+                <address class="locations-contacts">
+                    <a class="locations-link" href="tel:+610383766284">+61(0) 383 766 284</a>
+                    <a class="locations-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                </address>
+            </li>
+
+            <li class="locations-item">
+                <h3 class="locations-title foodtruck">Foodtruck</h3>
+
+                <div class="locations-box">
+                    <h4 class="locations-subtitle">Los Angeles</h4>
+                    <p class="locations-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+
+                <div class="locations-box">
+                    <h4 class="locations-workdays">Monday - Friday<span class="locations-time">06:00 AM - 10:00 PM</span></p>
+                        <h4 class="locations-workdays">Saturday - Sunday<span class="locations-time">08:00 AM - 16:00 PM</span></p>
+                </div>
+
+                <address class="locations-contacts">
+                    <a class="locations-link" href="tel:+610383766284">+61(0) 383 766 284</a>
+                    <a class="locations-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                </address>
+            </li>
+
+            <li class="locations-item">
+                <h3 class="locations-title cafe">Cafe</h3>
+
+                <div class="locations-box">
+                    <h4 class="locations-subtitle">New York</h4>
+                    <p class="locations-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+
+                <div class="locations-box">
+                    <h4 class="locations-workdays">Monday - Friday<span class="locations-time">06:00 AM - 10:00 PM</span></p>
+                        <h4 class="locations-workdays">Saturday - Sunday<span class="locations-time">08:00 AM - 16:00 PM</span></p>
+                </div>
+
+                <address class="locations-contacts">
+                    <a class="locations-link" href="tel:+610383766284">+61(0) 383 766 284</a>
+                    <a class="locations-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                </address>
+            </li>
+
+        </ul>
+        <div class="locations-buttons">
+            <a class="locations-btn" href="" target="_blank" rel="noreferrer noopener">
+                Our Locations >
+            </a>
+            <a class="locations-btn" href="" target="_blank" rel="noreferrer noopener">
+                Franchise >
+            </a>
+        </div>
     </div>
 </section>
