не находит путь к свг

--- a/src/sass/layouts/_section-products-item.scss
+++ b/src/sass/layouts/_section-products-item.scss
@@ -52,6 +52,7 @@
       &::after {
         content: '';
         display: block;
+        // background-image: url(./images/vector/ellipse.svg);
       }
 
       @media screen and (min-width: $desktop) {
