--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -13,13 +13,15 @@
                 </picture>
             </div>
             <div class="image-slider__text">
-                <span class="image-slider__text-decore"> Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem.
-                    In hendrerit </span> <span class="image-slider__text-decore"> nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span>
-
+                <div class="image-slider__text-box">
+                <span class="image-slider__text-decore">
+                    Nullam viverraNullam viverra consectetuer.
+                    Quisque cursus et, porttitor risus.
+                    Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                congue. Lorem ipsum primis in nibh vel risus.
+            </span>
             </div>
-
+            </div>
             <span class="image-slider__decore-circle">
             </span>
             <span class="image-slider__decore-circle">
@@ -40,13 +42,16 @@
                     <img src="./images/slider-test/negra1x.jpg" alt="negra1x" sizes="85px">
                 </picture>
             </div>
-            <div class="image-slider__text">
-                <span class="image-slider__text-decore"> Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem.
-                    In hendrerit </span> <span class="image-slider__text-decore"> nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span>
-
-            </div>
+                    <div class="image-slider__text">
+                        <div class="image-slider__text-box">
+                            <span class="image-slider__text-decore">
+                                Nullam viverraNullam viverra consectetuer.
+                                Quisque cursus et, porttitor risus.
+                                Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </span>
+                        </div>
+                    </div>
             <span class="image-slider__decore-circle">
             </span>
             <span class="image-slider__decore-circle">
@@ -67,12 +72,16 @@
                     <img src="./images/slider-test/kasandra1x.jpg" alt="kasandra1x" sizes="85px">
                 </picture>
             </div>
-            <div class="image-slider__text">
-                <span class="image-slider__text-decore"> Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem.
-                    In hendrerit </span> <span class="image-slider__text-decore"> nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span>
-            </div>
+                <div class="image-slider__text">
+                    <div class="image-slider__text-box">
+                        <span class="image-slider__text-decore">
+                            Nullam viverraNullam viverra consectetuer.
+                            Quisque cursus et, porttitor risus.
+                            Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.
+                        </span>
+                    </div>
+                </div>
             <span class="image-slider__decore-circle">
             </span>
             <span class="image-slider__decore-circle">
