--- a/src/sass/swiper-slide/_swiper.scss
+++ b/src/sass/swiper-slide/_swiper.scss
@@ -7,6 +7,7 @@
   }
   &__image {
     text-align: center;
+    margin-bottom: 15px;
   }
   &__image img {
     display: inline;
@@ -35,22 +36,29 @@
     padding: 50px 90px 40px 90px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15px;
     max-width: 930px;
     background-color: getColor('sliderBgrd');
     background-image: url(../images/slider-test/devil.svg);
     background-size: 55px;
     background-repeat: no-repeat;
-    background-position: 156px 38px;
+    background-position: 110px 38px;
 
     &-decore {
-      display: block;
       border-bottom: 1px solid getColor('sliderBorder');
+    }
+    &-box {
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
   &__paragraph {
     font-family: $main-font;
     font-size: 16px;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 35px;
   }
   &__decore-circle {
     display: inline-block;
@@ -58,5 +66,6 @@
     height: 4px;
     border-radius: 50%;
     background-color: getColor('btnActiv');
+    margin-bottom: 15px;
   }
 }
